# routefinders

./: .gitignore  README.md  maps.json  pyproject.toml  routefinders.py  tasks.py
documentation/: testausdokumentti.md  toteutusdokumentti.md  vaatimusmaarittely.md
documentation/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko6.md
src/: algorithm_tester.py  algorithms.py  astar.py  dijkstra.py  grid.py  gui.py  index.py  jps.py  map_handler.py  ui.py
src/tests/: algorithm_test.py  grid_test.py
