[tool.poetry]
name = "routefinders"
version = "0.1.0"
description = ""
authors = ["Miko Paajanen <miko.paajanen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
invoke = "^2.2.0"
rich = "^13.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
